# logfile_scanner

./: .pre-commit-config.yaml  README.md  logfile_scanner.sh  pyproject.toml
logfile_scanner/: main.py  settings.yml  state.yml  utils.py
logfile_scanner/devenv_files/: log_output.txt  settings.yml  vlc_logs_test
logfile_scanner/scanner/: base.py  vlc.py
src/: main.py  settings.yml  state.yml  utils.py
src/devenv_files/: settings.yml  state.yml  vlc_settings.yml
src/scanner/: base.py  vlc.py  vlc_settings.yml
