[tool.poetry]
name = "logfile-scanner"
version = "0.1.0"
description = "a script for generic logfile scanning. It scans, finds what you want and does what you want with it"
authors = ["Fabian Guevara <ricardo.fabian.guevara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "6.0.1"
pre-commit = "^3.7.0"
pickledb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
